restructure project into single solution with two subprojects

--- a/UserInterface/App.axaml
+++ b/UserInterface/App.axaml
@@ -1,12 +1,12 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:OdroidPianoteq"
-             x:Class="OdroidPianoteq.App">
+             xmlns:local="using:UserInterface"
+             x:Class="UserInterface.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
 
     <Application.Styles>
-        <FluentTheme Mode="Dark"/>
+        <FluentTheme Mode="Light"/>
     </Application.Styles>
 </Application>
